code-ingress-dvan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-dvan
  namespace: arnoldas
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "code-server"
    cert-manager.io/cluster-issuer: letsencrypt-prod-xcitedb
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/server-snippets: |
     location / {
      proxysetheader Upgrade $httpupgrade;
      proxyhttpversion 1.1;
      proxysetheader X-Forwarded-Host $httphost;
      proxysetheader X-Forwarded-Proto $scheme;
      proxysetheader X-Forwarded-For $remoteaddr;
      proxysetheader Host $host;
      proxysetheader Connection "upgrade";
      proxycachebypass $httpupgrade;
      }
    # for the default ingress-nginx
#    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
#    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
#    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
      - xcitedb.asrc.albany.edu
      secretName: letsencrypt-prod-xcitedb-dvan
  rules:
  - host: xcitedb.asrc.albany.edu
    http:
      paths:
      - pathType: Prefix
        path: /dvan(/|$)(.*)
        backend:
          service:
            name: code-server
            port:
              number: 8080
